# trading-template

./: .gitignore  justfile  pyproject.toml
docker/: docker-compose.yml
docker/provisioning/datasources/: automatic.yml
src/mm_template/: __init__.py  __main__.py
src/sdk/: logger.py
tests/: test_main.py
