[project]
name = "mm-template"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Peter Jordan", email = "p@alphazen.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"
license = { text = "MIT" }

[project.scripts]
"dev" = "mm_template:main"

[tool.rye.scripts]
rye_script = {cmd = 'echo hello world'}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.2.2",
    "pip>=24.1.1",
    "loguru>=0.7.2",
    "orjson>=3.10.6",
    "pre-commit>=3.7.1",
    "commitizen>=3.27.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mm_template"]

[tool.pyright]
venvPath = "."
venv = ".venv"
